--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="hero" class="hero">
         <div class="hero-background"></div>
         <div class="hero-content">
-            <h1 class="hero-title">Burra Hemanth Goud</h1>
+            <h1 class="hero-title">Hemanth Goud Burra</h1>
             <p class="hero-subtitle">Tech-driven Electronics Engineering Student, IoT, Embedded Systems & AI Enthusiast</p>
             <div class="hero-contact">
                 <span class="contact-item">📧 hemanthbhg486@gmail.com</span>
@@ -61,13 +61,10 @@
                 <div class="skill-category">
                     <h3>Programming Languages</h3>
                     <div class="skill-tags">
-                        <span class="skill-tag">C</span>
-                        <span class="skill-tag">C++</span>
+                        <span class="skill-tag">Basics of C</span>
+                        <span class="skill-tag">Basics of C++</span>
                         <span class="skill-tag">Python</span>
-                        <span class="skill-tag">Embedded C</span>
-                        <span class="skill-tag">JavaScript</span>
-                        <span class="skill-tag">HTML</span>
-                        <span class="skill-tag">CSS</span>
+                        <span class="skill-tag">Basics of Embedded C</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -76,17 +73,17 @@
                         <span class="skill-tag">Arduino</span>
                         <span class="skill-tag">ESP32</span>
                         <span class="skill-tag">Raspberry Pi</span>
-                        <span class="skill-tag">STM32</span>
                     </div>
                 </div>
                 <div class="skill-category">
                     <h3>Tools & Software</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">VS Code</span>
-                        <span class="skill-tag">Git</span>
-                        <span class="skill-tag">Proteus</span>
-                        <span class="skill-tag">Altium Designer</span>
+                        <span class="skill-tag">Github</span>
+                        <span class="skill-tag">Kicad</span>
+                        <span class="skill-tag">Google environment</span>
                         <span class="skill-tag">MATLAB</span>
+                        <span class="skill-tag">Vercel</span>
                     </div>
                 </div>
                 <div class="skill-category">
