--- a/index.html
+++ b/index.html
@@ -53,6 +53,32 @@
             <a href="#skills" class="cta-button">Explore My Work</a>
         </div>
     </section>
+    <!-- Work Experience Section -->
+<section id="work-experience" class="work-experience-section">
+    <div class="container">
+        <h2 class="section-title">Work Experience</h2>
+        <div class="experience-grid">
+            <div class="experience-card">
+                <h3>Human Resources Intern Team Lead</h3>
+                <p><strong>GAO Tek Inc.</strong> | Aug 13, 2025 – Oct 20, 2025</p>
+                <ul>
+                    <li>Managed and guided a team of HR interns, driving successful recruitment and onboarding processes.</li>
+                    <li>Coordinated weekly meetings and training sessions, fostering teamwork and professional development.</li>
+                    <li>Recognized for outstanding leadership and attention to detail in maintaining records and optimizing HR practices.</li>
+                </ul>
+            </div>
+            <div class="experience-card">
+                <h3>Human Resources Intern</h3>
+                <p><strong>GAO Tek Inc.</strong> | Jul 20, 2025 – Aug 13, 2025</p>
+                <ul>
+                    <li>Assisted in recruitment, onboarding, and employee documentation, streamlining HR operations for new hires.</li>
+                    <li>Maintained digital HR records and tracked attendance and performance, ensuring data accuracy and integrity.</li>
+                    <li>Supported HR communications and participated in team meetings, enhancing collaboration and process improvement.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
     <!-- Skills Section -->
     <section id="skills" class="skills-section">
         <div class="container">
